[gd_scene load_steps=3 format=3 uid="uid://dr68jkgy6u0ho"]

[ext_resource type="Script" uid="uid://bb45pvxpemi2l" path="res://scripts/ui/TalentTree.gd" id="1_6ehpk"]
[ext_resource type="PackedScene" uid="uid://05dw4uiuesle" path="res://scenes/ui/TalentNode.tscn" id="2_node"]

[node name="TalentTree" type="Control" groups=["talent_tree"]]
custom_minimum_size = Vector2(800, 600)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ehpk")
talent_node_scene = ExtResource("2_node")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClassLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Class Label"

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Points Label"
horizontal_alignment = 2

[node name="NodeContainer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
